appId: ${APP_ID}
env:
  APP_ID: in.koreatech.koin.dev
---
- runFlow: open_drawer.yaml
- tapOn:
    id: "${APP_ID}:id/navi_item_login_or_logout"
- extendedWaitUntil:
    visible: "로그인"
    timeout: 10000
- assertVisible: "로그인"
