appId: ${APP_ID}
env:
  APP_ID: in.koreatech.koin.dev
---
- runFlow: ../common/open_drawer.yaml
- scrollUntilVisible:
    element:
      id: "${APP_ID}:id/navi_item_operating_information"
    direction: DOWN
    timeout: 10000
- tapOn:
    id: "${APP_ID}:id/navi_item_operating_information"
- extendedWaitUntil:
    visible: "교내 시설물 정보"
    timeout: 15000
- assertVisible: "교내 시설물 정보"
